HealthCare CRM/debugger-project/Healthcare crm/force-app/main/default/objects/Appointment__c/fields/Appointment_End__c.field-meta.xml
<CustomField>
    <fullName>Appointment_End__c</fullName>
    <label>Appointment_End</label>
    <type>DateTime</type>
</CustomField>