HealthCare CRM/debugger-project/Healthcare crm/force-app/main/default/objects/Appointment__c/fields/Appointment_Start__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Start__c</fullName>
    <label>Appointment Start</label>
    <type>DateTime</type>
</CustomField>