HealthCare CRM/debugger-project/Healthcare crm/force-app/main/default/objects/Appointment__c/fields/Follow_Up_Completed__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up Completed</label>
    <type>Checkbox</type>
</CustomField>