HealthCare CRM/debugger-project/Healthcare crm/force-app/main/default/objects/Appointment__c/fields/Purpose_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Visit__c</fullName>
    <label>Purpose of Visit</label>
    <type>TextArea</type>
</CustomField>