HealthCare CRM/debugger-project/Healthcare crm/force-app/main/default/objects/Appointment__c/recordTypes/Chronic_FollowUp.recordType-meta.xml
<RecordType>
    <fullName>Chronic_FollowUp</fullName>
    <active>true</active>
    <label>Chronic FollowUp</label>
</RecordType>