HealthCare CRM/debugger-project/Healthcare crm/force-app/main/default/objects/Appointment__c/recordTypes/General_Checkup.recordType-meta.xml
<RecordType>
    <fullName>General_Checkup</fullName>
    <active>true</active>
    <label>General Checkup</label>
</RecordType>