HealthCare CRM/debugger-project/Healthcare crm/force-app/main/default/objects/Appointment__c/recordTypes/Vaccination.recordType-meta.xml
<RecordType>
    <fullName>Vaccination</fullName>
    <active>true</active>
    <label>Vaccination</label>
</RecordType>