HealthCare CRM/debugger-project/Healthcare crm/force-app/main/default/objects/Appointment__c/validationRules/Prevent_Appointment_In_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Appointment_In_Past</fullName>
    <active>true</active>
    <errorConditionFormula>Appointment_Start__c &lt; NOW()</errorConditionFormula>
    <errorDisplayField>Appointment_Start__c</errorDisplayField>
    <errorMessage>Appointment cannot be scheduled in the past.</errorMessage>
</ValidationRule>